# macnest

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tray-popup.html  vite.config.ts
.superpowers/brainstorm/52555-1779104260/content/: sftp-layout-finalshell.html  sftp-layout.html  waiting.html
.superpowers/brainstorm/52555-1779104260/state/: server-stopped
.superpowers/brainstorm/60543-1778946221/content/: terminal-layout.html
.superpowers/brainstorm/60543-1778946221/state/: server-info
.superpowers/brainstorm/86772-1779105022/content/: tmux-layout.html  waiting.html
.superpowers/brainstorm/86772-1779105022/state/: server-stopped
docs/superpowers/plans/: 2026-05-16-bookmark-groups.md  2026-05-16-ssh-terminal.md  2026-05-18-sftp-file-manager.md  2026-05-18-tmux-management.md  2026-05-27-sftp-context-menu.md  2026-06-05-tmux-pane-layout.md  2026-06-06-rdp-rgba-implementation.md  2026-06-08-database-manager-redesign.md  2026-06-08-mysql-manager.md  2026-06-12-delete-rdp-mysql-notification.md
docs/superpowers/specs/: 2026-05-16-bookmark-groups-design.md  2026-05-16-ssh-terminal-design.md  2026-05-18-sftp-file-manager-design.md  2026-05-18-tmux-management-design.md  2026-05-27-sftp-context-menu-design.md  2026-06-05-tmux-pane-layout-design.md  2026-06-06-rdp-redesign-design.md  2026-06-08-database-manager-redesign-design.md  2026-06-08-mysql-manager-design.md  2026-06-12-delete-rdp-mysql-notification-design.md  2026-06-15-rdp-embedded-client-design.md
scripts/: convert-icons.cjs
src/: App.tsx  styles.css  tray-popup.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  docker.rs  docker_terminal.rs  error.rs  main.rs  notification_scheduler.rs  process.rs  safari_bookmarks.rs  security.rs  system.rs
src-tauri/src/mysql/: backup.rs  connection.rs  mod.rs  query.rs  schema.rs
src-tauri/src/rdp/: encoder.rs  manager.rs  mod.rs  network_client.rs  session.rs
src-tauri/src/ssh/: client.rs  mod.rs  session.rs  sftp.rs  types.rs  websocket.rs
src-tauri/src/tmux/: commands.rs  mod.rs  pty.rs  types.rs
src/components/: BookmarkIcon.tsx  Layout.tsx  LogList.tsx
src/components/icons/: MacNestLogo.tsx
src/components/mysql/: BackupDialog.tsx  BackupPanel.tsx  ConnectionDialog.tsx  ConnectionPanel.tsx  ErrorBoundary.tsx  ObjectTree.tsx  QueryEditor.tsx  ResultTable.tsx  TabBar.tsx  TableStructureView.tsx
src/components/rdp/: RdpCanvas.tsx
src/components/terminal/: BaseTerminal.tsx  ContextMenu.tsx  DockerTerminalDialog.tsx  SftpFileDetail.tsx  SftpFileList.tsx  SftpPanel.tsx  SftpTree.tsx  TmuxTerminal.tsx  XTerm.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  select.tsx  separator.tsx  switch.tsx  tabs.tsx  textarea.tsx
src/lib/: api.ts  mysql-api.ts  notification.ts  notification.tsx  tree.ts  utils.ts
src/pages/: Bookmarks.tsx  Dashboard.tsx  DatabaseManager.tsx  Docker.tsx  Mysql.tsx  Notifications.tsx  Rdp.tsx  Services.tsx  Settings.tsx  System.tsx  Terminal.tsx  Tmux.tsx  TrayPopup.tsx
src/stores/: mysql.ts  terminal.ts  theme.ts
src/types/: index.ts
