[package]
name = "macnest"
version = "0.1.0"
description = "macOS 运维面板 - 本地进程与Docker管理工具"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"] }
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
lazy_static = "1.4"

# === SSH 协议 ===
russh = "0.49"

# === WebSocket 服务器（PTY 数据流）===
tokio-tungstenite = "0.29"
futures = "0.3"

# === SSH Handler trait 需要 ===
async-trait = "0.1"

# === SFTP 文件传输 ===
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# === PTY 支持（tmux 内嵌终端）===
portable-pty = "0.9"

# === base64 编码（WebSocket text message 传输二进制数据）===
base64 = "0.22"

# === 凭据加密 ===
aes-gcm = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
