[package]
name = "macnest"
version = "0.1.0"
description = "macOS 运维面板 - 本地进程与Docker管理工具"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util"] }
sysinfo = "0.31"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
regex = "1"
lazy_static = "1.4"
plist = "1.7"

# === SSH 协议 ===
russh = "0.49"

# === WebSocket 服务器（PTY 数据流）===
tokio-tungstenite = "0.29"
futures = "0.3"

# === SSH Handler trait 需要 ===
async-trait = "0.1"

# === SFTP 文件传输 ===
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# === PTY 支持（tmux 内嵌终端）===
portable-pty = "0.9"

# === base64 编码（WebSocket text message 传输二进制数据）===
base64 = "0.22"

# === Unix 信号支持（向子进程发送 SIGTERM 实现优雅关闭）===
libc = "0.2"

# === 凭据加密 ===
aes-gcm = "0.10"

# === URL 编码（RDP URI 构建）===
urlencoding = "2.1"

# === IronRDP（原生 RDP 客户端）===
ironrdp-pdu = "0.8"
ironrdp-connector = "0.9"
ironrdp-session = "0.9"
ironrdp-graphics = "0.8"
ironrdp-blocking = "0.9"
ironrdp = "0.9"
ironrdp-core = "0.2"
tokio-rustls = "0.26"
tracing = "0.1"
url = "2.5"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
image = { version = "0.25", default-features = false, features = ["png"] }
ureq = { version = "2.12", default-features = false, features = ["tls"] }
x509-cert = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
